-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10.0 Beta1
-
None
-
-
082e632c6 (dev), 8a5e5653b (6.10), 67896f1fb (6.9), 8b20662a8 (tqtc/lts-6.8)
-
2025wk30s2QtforAndroid
When runninng src\qtbase\tests\manual\android_content_uri
it fails with
FAIL! : tst_ContentUris::readWriteFile() 'QFileInfo(url).fileName() == fileName' returned FALSE. ()
FAIL! : tst_ContentUris::dirFacilities() 'listFiles(dir).isEmpty()' returned FALSE. ()
FAIL! : tst_ContentUris::fileOperations() 'file.fileName() == renamedUrl' returned FALSE. ()
Way to reproduce:
Open and compile project with QtCreator 17.0.0.
Run the test on device, in this case Google Pixel6a
Follow the instructions.
When creating second test file, app finishes prematurely. Test finishes with failed cases and crashes while closing down. See log.